Interact with DOM and perform type casting

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- output list -->
     <ul class="item-list">
-      
+
     </ul>
   </div>
 
@@ -28,7 +28,7 @@
       <div class="field">
         <label>To / From:</label>
         <input type="text" id="tofrom">
-      </div>   
+      </div>
       <div class="field">
         <label>Details:</label>
         <input type="text" id="details">
@@ -43,6 +43,6 @@
     <a href="https://www.thenetninja.co.uk">The Net Ninja</a>
   </footer>
 
-  <script src='sandbox.js'></script>
+  <script src='public/app.js'></script>
 </body>
 </html>
