--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TypeScript Tutorial</title>
+  <title>TypeScript</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -40,9 +40,8 @@
       <button>Add</button>
     </form>
 
-    <a href="https://www.thenetninja.co.uk">The Net Ninja</a>
   </footer>
 
-  <script src='public/app.js'></script>
+  <script type="module" src='public/app.js'></script>
 </body>
 </html>
